    3. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response. 
       This behavior matches that currently used by IE and Navigator.
    4. No order is guaranteed for parameters from forms, contrary to the HTML 4.01 spec

Limitations: HttpUnit does not support JavaScript

Revision History:

19-Jun-2001
Problems corrected:
    1. The cookbook was missing parentheses for its constructors
    2. Updated the NearWords example to accomodate changes to the Merriam-Webster site
    
18-Jun-2001 1.2.5                            
Acknowledgements:
    Thanks to Rolf Schmidiger for corrected behavior when failing to find a site
    Thanks to Tom Watkins, Deepa Dihr, Marcos Tarruella for their implementation of
       PutMethodWebRequest
    Thanks to Larry Hamel for writing the SSL FAQ

Additions:
    1. selectFile() now can infer file content type for the most common file extensions:
       text, txt, gif, jpg, jpeg, png, html, htm and zip.
    2. A new version of selectFile allows explicit specification of file content type
       which will override any inferred type.
    3. <button> tags are now recognized as submit buttons if their type is "submit"
       or not specified.
    4. Reading the character set from a <meta> tag is now supported.
    5. Added PutMethodWebRequest
    6. PostMethodWebRequest now has a constructor which allows its contents to be
       taken from an InputSource, like PutMethodWebRequest
    7. Added ServletUnitClient and InvocationContext to servletunit to
       permit more granular testing of servlets (still not well documented)
    8. Added getInputStream method in WebResponse to support non-text responses.
    9. Matching of text in web pages is now controlled by the HttpUnitOption property
       'matchesIgnoreCase'. The default behavior is as before - matches are not case sensitive
       
Problems corrected: